# Oscillate

./: README.md  com.example.Oscillate.json  com.example.Oscillate.yml  main.py  meson.build  pyproject.toml
data/: com.example.Oscillate.appdata.xml  com.example.Oscillate.desktop.in  com.example.Oscillate.gresource.xml  com.example.Oscillate.gschema.xml  com.example.Oscillate.metainfo.xml.in  com.example.Oscillate.service.in  meson.build  style.css
data/glib-2.0/schemas/: com.example.Oscillate.gschema.xml  gschemas.compiled
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: com.example.Oscillate.gresource.xml  meson.build  oscillate.in
src/oscillate/: __init__.py  main.py  player.py  preferences.py  window.py  window.ui
